--- a/pregnancy.html
+++ b/pregnancy.html
@@ -30,6 +30,15 @@
     <a href="UpdateStats.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Update Stats</a>
     <a href="WFHOption1.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white ">WFH Edition</a>
     <a href="i+lgbtq.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">i+LGBTQ</a>
+    <a href="askExpert.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Expert Advice</a>
+    <div class="w3-dropdown-hover w3-right">
+      <button class="btn"><i class="fa fa-bars w3-xxlarge "></i></button>
+      <div class="w3-dropdown-content w3-bar-block w3-card-4" style="right:0">
+        <a href="notifications.html" class="w3-bar-item w3-button">See notifications</a>
+        <a href="reminder.html" class="w3-bar-item w3-button">Set Reminders</a>
+        <a href="#" class="w3-bar-item w3-button">LOG OUT</a>
+      </div>
+    </div>
   </div>
 
 
@@ -41,6 +50,7 @@
     <a href="UpdateStats.html" class="w3-bar-item w3-button w3-padding-large">Update Stats</a>
     <a href="WFHOption1.html" class="w3-bar-item w3-button w3-padding-large">WFH Edition</a>
     <a href="i+lgbtq.html" class="w3-bar-item w3-button w3-padding-large">i+LGBTQ</a>
+    <a href="askExpert.html" class="w3-bar-item w3-button w3-padding-large">Expert Advice</a>
   </div>
 </div>
 
