--- a/i+lgbtq.html
+++ b/i+lgbtq.html
@@ -24,6 +24,15 @@
     <a href="UpdateStats.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Update Stats</a>
     <a href="WFHOption1.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white ">WFH Edition</a>
     <a href="i+lgbtq.html" class="w3-bar-item w3-button w3-padding-large w3-white">i+LGBTQ</a>
+    <a href="askExpert.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Expert Advice</a>
+    <div class="w3-dropdown-hover w3-right">
+      <button class="btn"><i class="fa fa-bars w3-xxlarge "></i></button>
+      <div class="w3-dropdown-content w3-bar-block w3-card-4" style="right:0">
+        <a href="notifications.html" class="w3-bar-item w3-button">See notifications</a>
+        <a href="reminder.html" class="w3-bar-item w3-button">Set Reminders</a>
+        <a href="#" class="w3-bar-item w3-button">LOG OUT</a>
+      </div>
+     </div>
   </div>
 
   <!-- Navbar on small screens -->
@@ -34,6 +43,7 @@
     <a href="UpdateStats.html" class="w3-bar-item w3-button w3-padding-large">Update Stats</a>
     <a href="WFHOption1.html" class="w3-bar-item w3-button w3-padding-large">WFH Edition</a>
     <a href="i+lgbtq.html" class="w3-bar-item w3-button w3-padding-large">i+LGBTQ</a>
+    <a href="askExpert.html" class="w3-bar-item w3-button w3-padding-large">Expert Advice</a>
   </div>
 </div>
 
@@ -55,7 +65,7 @@
 
 
 <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-    <h1 class="w3-margin w3-xlarge">“Physical fitness is the first requisite of happiness.” – Joseph Pilates.</h1>
+    <h1 class="w3-margin w3-xlarge"> “Equality means more than passing laws. The struggle is really won in the hearts and minds of the community, where it really counts.” – Barbara Gittings</h1>
 </div>
 
 <!-- Footer -->
